# htw_search

./: .env  .gitignore  LICENSE  conda-env.yaml  interactive.py  requirements.txt  setup.cfg
gui/: gui.py  webmain.py
htw_search/: __main__.py  build_index_pickles.py  build_page_pickles.py  formatter.py  page.py  search.py
htw_search/utils/: env.py  paths.py  transformers.py
tests/: build_pickles_test.py  env_test.py  formatter_test.py  main_test.py  page_test.py
