[metadata]
name = htw_search
version = 0.0.1
author = Gefei Zhang and Matthias Hölzl
author_email = tc@xantira.com
description = An experimental semantic search engine for the HTW Berlin web pages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/htw_search
project_urls =
    Bug Tracker = https://github.com/hoelzl/htw_search/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typer>=0.4.0


[options.entry_points]
console_scripts:
    htw-search = htw_search.__main__:app